# FLKL

./: README.md  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/flkl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: torch_model360.mnn
app/src/main/cpp/: CMakeLists.txt  dummy-lib.cpp
app/src/main/face_clf/: BaseModel.hpp  CMakeLists.txt  FaceDetect.hpp  FaceFeature.hpp  FaceLandmark.hpp  FaceMaskDetect.hpp  FaceRecognition.hpp  MNNModel.hpp  jni.cpp  lang.hpp
app/src/main/face_clf/dlib_include/dlib/: config.h  revision.h
app/src/main/face_clf/include/MNN/: ImageProcess.hpp  MNNDefine.h  MNNForwardType.h  Tensor.hpp  VCS.h
app/src/main/face_clf/include/MNN/expr/: Executor.hpp  Expr.hpp  MathOp.hpp  NeuralNetWorkOp.hpp
app/src/main/face_clf/include/MNN/plugin/: PluginContext.hpp
app/src/main/java/com/example/flkl/: AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java  FaceClf.java  FaceInfo.java
app/src/main/res/layout/: activity_camera.xml  fragment_camera2_basic.xml
app/src/main/res/layout-land/: fragment_camera2_basic.xml
app/src/main/res/values/: base-strings.xml  strings.xml
app/src/test/java/com/example/flkl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary430/: build.gradle
